chore: proto clean up and websocket setup WIP

--- a/game-server/common/Makefile
+++ b/game-server/common/Makefile
@@ -4,10 +4,4 @@ gen:
 		api/proto/common/common.proto \
 		api/proto/example/example.proto \
 		api/proto/auth/auth.proto \
-		api/proto/item/item.proto \
-		api/proto/notification/notification.proto \
-		api/proto/build/build.proto \
-		api/proto/skill/skill.proto \
-		api/proto/tag/tag.proto \
-		api/proto/class/class.proto \
-		api/proto/rating/rating.proto \
+		api/proto/game/game.proto \
