--- a/game-client/package.json
+++ b/game-client/package.json
@@ -16,7 +16,8 @@
     "phaser": "^3.80.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
