--- a/game-server/api-gateway/docker-compose.yml
+++ b/game-server/api-gateway/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   db:
-    image: postgres:latest
+    image: postgres:17
     container_name: cosmic_void_api_gateway_db
     environment:
       POSTGRES_USER: user
@@ -14,7 +14,7 @@ services:
       - cosmic_void_api_gateway_pgdata:/var/lib/postgresql/data
 
   test-db:
-    image: postgres:latest
+    image: postgres:17
     container_name: cosmic_void_api_gateway_test_db
     environment:
       POSTGRES_USER: user
